<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_usernamelength"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_username_error"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_passwordlength"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_password_error"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/note_password_empty"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/submitrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/label_btn_login" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:text="@string/label_btn_signup" />
        </TableRow>

        <RelativeLayout
            android:id="@+id/friendrow"
            android:layout_width="wrap_content"
            android:layout_height="206dp"
            android:layout_weight="2.09" >

            <TextView
                android:id="@+id/tv_currentuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/label_tv_currentuser"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_currentuser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/label_btn_done" />
        </RelativeLayout>
    </TableLayout>

</ScrollView>