<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_finduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_et_findfriend" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_findresultmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableRow
        android:id="@+id/create_buttowrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_btn_back" />

        <Button
            android:id="@+id/btn_invite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_btn_invite" />

        <Button
            android:id="@+id/btn_creategame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/label_btn_creategame" />
    </TableRow>

    <LinearLayout
        android:id="@+id/invited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_invitedlist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tv_invited"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/lv_invited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_list_item_1" >
        </ListView>
    </LinearLayout>

</TableLayout>