<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table_layout_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|top" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_creategame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_btn_creategame" />

        <Button
            android:id="@+id/btn_joingame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_btn_joingame" />
    </TableRow>

    <TableRow
        android:id="@+id/lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/games"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_gameslist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tv_games"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/lv_gameids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@android:layout/simple_list_item_1" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_playerlist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tv_players"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/lv_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                tools:listitem="@android:layout/simple_list_item_1" >

            </ListView>
        </LinearLayout>
    </TableRow>

</TableLayout>